fix: getfirst instead of get(0)